Revert "Fixed Product Page"
This reverts commit e2edd115c982faa3a0bde8fbd499f0a686912c7a.

--- a/assets/css/productpage.css
+++ b/assets/css/productpage.css
@@ -22,10 +22,9 @@
 	margin-top: 2%;
 }
 
-.product-info{
+.product-tab > a{
 	color: #1a1a1a;
-	letter-spacing: 2px !important;
-	text-transform: uppercase;
+	letter-spacing: 2px;
 }
 
 .tab-p{
