--- a/assets/css/productpage.css
+++ b/assets/css/productpage.css
@@ -88,3 +88,49 @@
 .product-cat-btn:hover{
 	text-decoration: underline;
 }
+
+.cust-select, .cust-area{
+	height: 44px;
+	font-size: 16px;
+	margin-bottom: 10px;
+	-webkit-appearance: none;
+	background: #fff;
+	border: 1px solid #d9d9d9;
+	border-top: 1px solid #c0c0c0;
+	/* border-radius: 2px; */
+	padding: 0 8px;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	outline-width: 0px;
+}
+
+.cust-area{
+	resize: none;
+	height: auto;
+	padding: 8px;
+}
+
+.cust-select:hover, .cust-area-hover{
+	border: 1px solid #b9b9b9;
+	border-top: 1px solid #a0a0a0;
+	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+}
+
+
+.pm-product-btn{
+	background-color: transparent;
+	color: #1a1a1a;
+	border-width: 0px;
+	border-radius: 0px;
+	padding: 12.5px;
+	padding-left: 20px;
+	padding-right: 20px;
+	font-size: .8em;
+}
+
+.pm-product-btn:hover{
+	color: #1a1a1a;
+	text-decoration: underline;
+}
