--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -40,7 +40,7 @@
 	outline-color: red !important;
 }
 
-input[type=text]:focus, input[type=password]:focus, input[type=email]:focus{
+input[type=text]:focus, input[type=password]:focus, input[type=number]:focus, input[type=email]:focus{
 	outline-color: #1a1a1a;
 }
 
